# datamars

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: main.rs  operator.rs  ops.rs
src/ops/: geomean.rs  harmean.rs  max.rs  mean.rs  median.rs  min.rs  std.rs  sum.rs
