# cargo-features = ["different-binary-name"]

[package]
name = "datamars"
version = "0.4.0"
edition = "2021"
description = "A Rust rewrite of https://www.gnu.org/software/datamash/"
license = "Apache-2.0"
repository = "https://github.com/InCogNiTo124/datamars.git"
keywords = ["cli", "data", "csv"]
categories = ["command-line-utilities", "development-tools", "mathematics", "science", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "ms"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.22", features = ["derive"]}
ordered-float = "^3.0.0"
csv = "^1.1"
